# apps/api/src/contexts/org-structure/presentation/http/dto/positions/create-position-link.dto.ts
@@ -3,9 +3,9 @@ import { IsInt, Min } from 'class-validator';
 import { ToOptionalInt } from 'src/common/transforms/query-sanitize.transform';
 
 export class CreatePositionLinkDto {
-  @ApiProperty({ description: 'Id of child position', example: 5 })
+  @ApiProperty({ description: 'Id of subordinate position', example: 5 })
   @ToOptionalInt({ min: 1 })
   @IsInt()
   @Min(1)
-  childId!: number;
+  subordinateId!: number;
 }
